# robot-llm

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  llm.py  main.py  pyproject.toml  tello.py
robotllm/: __init__.py  exceptions.py  llm.py  main.py
robotllm/actuator/: tello.py
robotllm/controller/llm/: base.py  fake.py  openai.py
robotllm/sensor/: yolov5.py
tests/: test.py  test_simple.py
