[tool.poetry]
name = "robotllm"
version = "0.1.0"
description = "llm for robot decision making"
authors = ["juicyjung <travelandi01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
openai = "^0.27.8"
opencv-python = "^4.8.0.74"
pandas = "^2.0.3"
psutil = "^5.9.5"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 200